New total commits

--- a/about.html
+++ b/about.html
@@ -112,62 +112,62 @@
                 <h2 class="section-title">Our Product Range</h2>
                 <p class="section-subtitle">Discover our comprehensive selection of premium products</p>
             </div>
-            <div class="products-grid">
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-home"></i>
-                    </div>
-                    <h3>Household Appliances</h3>
-                    <p>Essential appliances for your home</p>
+            <div class="category-grid-four">
+                <div class="category-card">
+                    <a href="household-appliances.html">
+                        <img src="assets/images/Household.JPG" alt="Household Appliances" style="object-fit: contain;">
+                        <h3>Household Appliances</h3>
+                        <p class="category-description">Essential appliances for your home</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-utensils"></i>
-                    </div>
-                    <h3>Kitchen Appliances</h3>
-                    <p>Premium tools for your culinary needs</p>
+                <div class="category-card">
+                    <a href="kitchen-appliances.html">
+                        <img src="assets/images/kitchen.JPG" alt="Kitchen Appliances" style="object-fit: contain;">
+                        <h3>Kitchen Appliances</h3>
+                        <p class="category-description">Premium tools for your culinary needs</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-gem"></i>
-                    </div>
-                    <h3>Luxury Products</h3>
-                    <p>Exclusive premium items</p>
+                <div class="category-card">
+                    <a href="luxury-products.html">
+                        <img src="assets/images/luxury.JPG" alt="Luxury Products" style="object-fit: contain;">
+                        <h3>Luxury Products</h3>
+                        <p class="category-description">Exclusive premium items</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-tshirt"></i>
-                    </div>
-                    <h3>Men's Products</h3>
-                    <p>Fashion and accessories for men</p>
+                <div class="category-card">
+                    <a href="men-products.html">
+                        <img src="assets/images/men.JPG" alt="Men Products" style="object-fit: contain;">
+                        <h3>Men's Products</h3>
+                        <p class="category-description">Fashion and accessories for men</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-female"></i>
-                    </div>
-                    <h3>Women's Products</h3>
-                    <p>Elegant fashion and accessories</p>
+                <div class="category-card">
+                    <a href="women-products.html">
+                        <img src="assets/images/women.JPG" alt="Women Products" style="object-fit: contain;">
+                        <h3>Women's Products</h3>
+                        <p class="category-description">Elegant fashion and accessories</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-capsules"></i>
-                    </div>
-                    <h3>Supplements</h3>
-                    <p>Health and wellness products</p>
+                <div class="category-card">
+                    <a href="supplements.html">
+                        <img src="assets/images/supplements.JPG" alt="Supplements" style="object-fit: contain;">
+                        <h3>Supplements</h3>
+                        <p class="category-description">Health and wellness products</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-mobile-alt"></i>
-                    </div>
-                    <h3>Gadgets</h3>
-                    <p>Latest tech and gadgets</p>
+                <div class="category-card">
+                    <a href="gadgets.html">
+                        <img src="assets/images/gadgets.JPG" alt="Gadgets" style="object-fit: contain;">
+                        <h3>Gadgets</h3>
+                        <p class="category-description">Latest tech and gadgets</p>
+                    </a>
                 </div>
-                <div class="product-category">
-                    <div class="category-icon">
-                        <i class="fas fa-box-open"></i>
-                    </div>
-                    <h3>General Goods</h3>
-                    <p>Everyday essential items</p>
+                <div class="category-card">
+                    <a href="general-goods.html">
+                        <img src="assets/images/generalgoods.JPG" alt="General Goods" style="object-fit: contain;">
+                        <h3>General Goods</h3>
+                        <p class="category-description">Everyday essential items</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -262,9 +262,8 @@
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
