--- a/categories.html
+++ b/categories.html
@@ -241,9 +241,8 @@
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
+                    <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
             </div>
         </div>
