--- a/contact.html
+++ b/contact.html
@@ -149,14 +149,14 @@
                         <i class="fab fa-facebook-f"></i> Follow on Facebook
                     </a>
                 </div>
-                <div class="social-card twitter">
+                <div class="social-card tiktok">
                     <div class="social-icon">
-                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-tiktok"></i>
                     </div>
-                    <h3>Twitter</h3>
-                    <p>Get real-time updates and join the conversation</p>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-twitter"></i> Follow on Twitter
+                    <h3>TikTok</h3>
+                    <p>Watch fun videos and stay entertained with our content</p>
+                    <a href="https://www.tiktok.com/@becksobiri" class="social-link" target="_blank">
+                        <i class="fab fa-tiktok"></i> Follow on TikTok
                     </a>
                 </div>
                 <div class="social-card instagram">
@@ -167,16 +167,6 @@
                     <p>See our latest products and behind-the-scenes content</p>
                     <a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" class="social-link" target="_blank">
                         <i class="fab fa-instagram"></i> Follow on Instagram
-                    </a>
-                </div>
-                <div class="social-card linkedin">
-                    <div class="social-icon">
-                        <i class="fab fa-linkedin-in"></i>
-                    </div>
-                    <h3>LinkedIn</h3>
-                    <p>Connect with us professionally and stay updated on our business news</p>
-                    <a href="#" class="social-link">
-                        <i class="fab fa-linkedin-in"></i> Connect on LinkedIn
                     </a>
                 </div>
             </div>
@@ -233,9 +223,8 @@
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
                     <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
         </div>
