--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- Left Carousel -->
                 <div class="image-carousel left-carousel">
                     <div class="carousel-slide active">
-                        <img src="https://via.placeholder.com/300x200/ff0000/ffffff?text=Product+1" alt="Featured Product">
+                        <img src="assets/images/premiumgadgets.JPG" alt="Premium Gadgets" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Premium Gadgets</h4>
                             <p>Starting at GHS 100</p>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="https://via.placeholder.com/300x200/0000ff/ffffff?text=Product+2" alt="Featured Product">
+                        <img src="assets/images/luxuryappliances.JPG" alt="Luxury Appliances" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Luxury Appliances</h4>
                             <p>Exclusive Deals</p>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="https://via.placeholder.com/300x200/00ff00/ffffff?text=Product+3" alt="Featured Product">
+                        <img src="assets/images/householdessentials.JPG" alt="Household Essentials" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Household Essentials</h4>
                             <p>Up to 30% OFF</p>
@@ -99,7 +99,7 @@
                 <!-- Right Carousel -->
                 <div class="image-carousel right-carousel">
                     <div class="carousel-slide active">
-                        <img src="https://via.placeholder.com/300x200/ffcc00/333333?text=Special+1" alt="Special Offer">
+                        <img src="assets/images/menscollection.JPG" alt="Men's Collection" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Men's Collection</h4>
                             <p>New Arrivals</p>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="https://via.placeholder.com/300x200/ff6b35/ffffff?text=Special+2" alt="Special Offer">
+                        <img src="assets/images/womensfashion.JPG" alt="Women's Fashion" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Women's Fashion</h4>
                             <p>Seasonal Sale</p>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="https://via.placeholder.com/300x200/667eea/ffffff?text=Special+3" alt="Special Offer">
+                        <img src="assets/images/healthsupplements.JPG" alt="Health Supplements" style="object-fit: cover;">
                         <div class="carousel-caption">
                             <h4>Health Supplements</h4>
                             <p>Buy 2 Get 1 Free</p>
@@ -267,15 +267,19 @@
             <h2 class="centered-heading">Why Choose Buysmart?</h2>
             <div class="badges-grid">
                 <div class="badge">
+                    <img src="assets/images/qualityproducts.JPG" alt="Quality Products" style="width: 40px; height: 40px;">
                     <h3>Quality Products</h3>
                 </div>
                 <div class="badge">
+                    <img src="assets/images/fastdelivery.JPG" alt="Fast Shipping" style="width: 40px; height: 40px;">
                     <h3>Fast Shipping</h3>
                 </div>
                 <div class="badge">
+                    <img src="assets/images/securepayment.JPG" alt="Secure Payment" style="width: 40px; height: 40px;">
                     <h3>Secure Payment</h3>
                 </div>
                 <div class="badge">
+                    <img src="assets/images/customersupport.JPG" alt="Customer Support" style="width: 40px; height: 40px;">
                     <h3>Customer Support</h3>
                 </div>
             </div>
@@ -302,9 +306,8 @@
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
                     <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
                     <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                 </ul>
             </div>
         </div>
