--- a/checkout.html
+++ b/checkout.html
@@ -179,7 +179,7 @@
             <p>&copy; 2026 Buysmart Enterprise. All rights reserved.</p>
         </div>
         <div class="developer-credits">
-            <p><i class="fas fa-code"></i> Developed by <a href="https://github.com/DromorNarh" target="_blank">Dromor Narh</a></p>
+            <p><i class="fas fa-code"></i> Developed by <a href="https://wa.me/233538284952" target="_blank">Dromor Narh</a></p>
         </div>
     </footer>
 
