--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo"><div class="logo">
                 <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
@@ -29,7 +29,7 @@
                     <input type="text" id="search-input" placeholder="Search products...">
                     <button id="search-button">Search</button>
                 </div>
-                <div class="cart-icon">
+                </div><div class="cart-icon">
                     <a href="cart.html">
                         <span id="cart-count">0</span>
                     </a>
