--- a/supplements.html
+++ b/supplements.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">
+            <div class="logo"><div class="logo">
                 <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
             <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
