--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="logo">
                 <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
-            <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
+            <button class="hamburger" id="mobile-nav-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
