--- a/men-products.html
+++ b/men-products.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><div class="logo">
+            <div class="logo">
                 <img src="assets/images/Buysmartlogo.PNG" alt="Buysmart Enterprise Logo">
             </div>
-            <button class="hamburger" id="mobile-nav-toggle" onclick="toggleMobileNav()">
+            <button class="hamburger" id="mobile-nav-toggle">
                 <span></span>
                 <span></span>
                 <span></span>
