facebook social links

--- a/checkout.html
+++ b/checkout.html
@@ -169,7 +169,7 @@
             <div class="social-media">
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/buysmartgh/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
                     <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
