--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                         <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <h3>Visit Our Office</h3>
-                    <p class="contact-detail">No. 123 Commerce Street, Accra, Ghana</p>
+                    <p class="contact-detail">Westland, West Legon, Accra, Ghana</p>
                     <p class="contact-availability">Mon-Fri: 9AM - 5PM</p>
                     <button class="contact-button" onclick="window.location.href='https://maps.google.com/?q=No.+123+Commerce+Street,+Accra,+Ghana'">
                         <i class="fas fa-map-marker-alt"></i> Get Directions
@@ -145,7 +145,7 @@
                     </div>
                     <h3>Facebook</h3>
                     <p>Like our page for daily updates and community discussions</p>
-                    <a href="#" class="social-link">
+                    <a href="https://www.facebook.com/buysmartgh/" class="social-link" target="_blank">
                         <i class="fab fa-facebook-f"></i> Follow on Facebook
                     </a>
                 </div>
@@ -222,7 +222,7 @@
             <div class="social-media">
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/buysmartgh/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="https://www.tiktok.com/@becksobiri" target="_blank"><i class="fab fa-tiktok"></i></a></li>
                     <li><a href="https://www.instagram.com/buysmart_ent?igsh=MXNxZzZ3NHM3ZTRqMA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
                 </ul>
