--- a/household-appliances.html
+++ b/household-appliances.html
@@ -107,7 +107,7 @@
             <div class="social-media">
                 <h3>Connect With Us</h3>
                 <ul class="social-icons">
-                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="https://www.facebook.com/buysmartgh/" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
