--- a/categories.html
+++ b/categories.html
@@ -68,7 +68,7 @@
                 <h2 class="section-title">Our Product Categories</h2>
                 <p class="section-subtitle">Discover quality products across all your favorite categories</p>
             </div>
-            <div class="category-grid">
+            <div class="category-grid-four">
                 <div class="category-card">
                     <a href="household-appliances.html">
                         <img src="assets/images/Household.JPG" alt="Household Appliances">
