--- a/gadgets.html
+++ b/gadgets.html
@@ -68,32 +68,6 @@
                 <div class="loading-spinner">Loading products...</div>
             </div>
         </section>
-                <div class="product-card">
-                    <h3>Gadget 1</h3>
-                    <p class="price">GHS 100.00</p>
-                    <button class="button" onclick="addToCart('701', 'Gadget 1', 100.00)">Add to Cart</button>
-                    <a href="product-details.html" class="button">View More</a>
-                </div>
-                <div class="product-card">
-                    <h3>Gadget 2</h3>
-                    <p class="price">GHS 150.00</p>
-                    <button class="button" onclick="addToCart('702', 'Gadget 2', 150.00)">Add to Cart</button>
-                    <a href="product-details.html" class="button">View More</a>
-                </div>
-                <div class="product-card">
-                    <h3>Gadget 3</h3>
-                    <p class="price">GHS 200.00</p>
-                    <button class="button" onclick="addToCart('703', 'Gadget 3', 200.00)">Add to Cart</button>
-                    <a href="product-details.html" class="button">View More</a>
-                </div>
-                <div class="product-card">
-                    <h3>Gadget 4</h3>
-                    <p class="price">GHS 250.00</p>
-                    <button class="button" onclick="addToCart('704', 'Gadget 4', 250.00)">Add to Cart</button>
-                    <a href="product-details.html" class="button">View More</a>
-                </div>
-            </div>
-        </section>
 
         <!-- Advert Section for Gadgets -->
         <section class="advert-container">
@@ -105,6 +79,58 @@
                 </div>
             </div>
         </section>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/gadgets.JPG" alt="Gadget 1" style="object-fit: contain; width: 100%; height: 150px;">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Gadget 1</h3>
+                        <div class="product-price">GHS 100.00</div>
+                        <div class="product-buttons">
+                            <button class="button add-to-cart-btn" onclick="addToCart('701', 'Gadget 1', 100.00)">Add to Cart</button>
+                            <a href="product-details.html" class="button view-details-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/premiumgadgets.JPG" alt="Gadget 2" style="object-fit: contain; width: 100%; height: 150px;">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Gadget 2</h3>
+                        <div class="product-price">GHS 150.00</div>
+                        <div class="product-buttons">
+                            <button class="button add-to-cart-btn" onclick="addToCart('702', 'Gadget 2', 150.00)">Add to Cart</button>
+                            <a href="product-details.html" class="button view-details-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/gadgets.JPG" alt="Gadget 3" style="object-fit: contain; width: 100%; height: 150px;">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Gadget 3</h3>
+                        <div class="product-price">GHS 200.00</div>
+                        <div class="product-buttons">
+                            <button class="button add-to-cart-btn" onclick="addToCart('703', 'Gadget 3', 200.00)">Add to Cart</button>
+                            <a href="product-details.html" class="button view-details-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/premiumgadgets.JPG" alt="Gadget 4" style="object-fit: contain; width: 100%; height: 150px;">
+                    </div>
+                    <div class="product-info">
+                        <h3 class="product-name">Gadget 4</h3>
+                        <div class="product-price">GHS 250.00</div>
+                        <div class="product-buttons">
+                            <button class="button add-to-cart-btn" onclick="addToCart('704', 'Gadget 4', 250.00)">Add to Cart</button>
+                            <a href="product-details.html" class="button view-details-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
         
         <section class="follow-buysmart">
             <h2>Follow Buysmart</h2>
