--- a/product-details.html
+++ b/product-details.html
@@ -114,13 +114,75 @@
         <i class="fab fa-whatsapp"></i>
     </a>
     
+    <script src="js/api.js"></script>
     <script src="js/main.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/follow.js"></script>
     <script>
+        // Wait for API to be available and load product details
+        document.addEventListener('DOMContentLoaded', async () => {
+            // Wait a moment for the API client to initialize
+            await new Promise(resolve => setTimeout(resolve, 100));
+
+            if (typeof window.buysmartAPI !== 'undefined') {
+                await loadProductDetails();
+            } else {
+                console.error('BuySmart API client not loaded');
+            }
+        });
+
+        async function loadProductDetails() {
+            const api = window.buysmartAPI;
+
+            // Get product ID from URL parameters
+            const urlParams = new URLSearchParams(window.location.search);
+            const productId = urlParams.get('id');
+
+            if (!productId) {
+                document.getElementById('product-title').textContent = 'Product Not Found';
+                document.getElementById('product-description').textContent = 'No product ID provided.';
+                return;
+            }
+
+            try {
+                const product = await api.getProductById(productId);
+
+                if (!product) {
+                    document.getElementById('product-title').textContent = 'Product Not Found';
+                    document.getElementById('product-description').textContent = 'The requested product could not be found.';
+                    return;
+                }
+
+                // Populate product details
+                document.getElementById('product-title').textContent = product.name;
+                document.getElementById('product-price').textContent = `GHS ${product.price.toFixed(2)}`;
+                document.getElementById('product-category').textContent = `Category: ${product.category || 'Uncategorized'}`;
+                document.getElementById('product-description').textContent = product.description || 'No description available.';
+
+                // Set main product image
+                const mainImageDiv = document.getElementById('main-product-image');
+                if (product.coverImage) {
+                    mainImageDiv.innerHTML = `<img src="${product.coverImage}" alt="${product.name}" style="width: 100%; height: 100%; object-fit: contain;">`;
+                }
+
+                // Update Add to Cart button
+                const addToCartBtn = document.querySelector('.product-info .button');
+                if (addToCartBtn) {
+                    addToCartBtn.onclick = () => addToCart(productId, product.name, product.price, product.coverImage);
+                }
+
+            } catch (error) {
+                console.error('Error loading product details:', error);
+                document.getElementById('product-title').textContent = 'Error Loading Product';
+                document.getElementById('product-description').textContent = 'There was an error loading the product details. Please try again later.';
+            }
+        }
+
         function changeImage(imageSrc) {
             const mainImage = document.getElementById('main-product-image');
-            mainImage.src = imageSrc;
+            if (mainImage && imageSrc) {
+                mainImage.innerHTML = `<img src="${imageSrc}" alt="Product Image" style="width: 100%; height: 100%; object-fit: contain;">`;
+            }
         }
     </script>
 </body>
