--- a/gadgets.html
+++ b/gadgets.html
@@ -86,8 +86,13 @@
                     <div class="product-info">
                         <h3 class="product-name">Gadget 1</h3>
                         <div class="product-price">GHS 100.00</div>
+                        <div class="quantity-control">
+                            <button class="quantity-btn minus-btn" data-product-id="701">-</button>
+                            <span class="quantity-value" data-product-id="701">1</span>
+                            <button class="quantity-btn plus-btn" data-product-id="701">+</button>
+                        </div>
                         <div class="product-buttons">
-                            <button class="button add-to-cart-btn" onclick="addToCart('701', 'Gadget 1', 100.00)">Add to Cart</button>
+                            <button class="button add-to-cart-btn" data-product-id="701" data-product-name="Gadget 1" data-product-price="100.00">Add to Cart</button>
                             <a href="product-details.html" class="button view-details-btn">View More</a>
                         </div>
                     </div>
@@ -99,8 +104,13 @@
                     <div class="product-info">
                         <h3 class="product-name">Gadget 2</h3>
                         <div class="product-price">GHS 150.00</div>
+                        <div class="quantity-control">
+                            <button class="quantity-btn minus-btn" data-product-id="702">-</button>
+                            <span class="quantity-value" data-product-id="702">1</span>
+                            <button class="quantity-btn plus-btn" data-product-id="702">+</button>
+                        </div>
                         <div class="product-buttons">
-                            <button class="button add-to-cart-btn" onclick="addToCart('702', 'Gadget 2', 150.00)">Add to Cart</button>
+                            <button class="button add-to-cart-btn" data-product-id="702" data-product-name="Gadget 2" data-product-price="150.00">Add to Cart</button>
                             <a href="product-details.html" class="button view-details-btn">View More</a>
                         </div>
                     </div>
@@ -112,8 +122,13 @@
                     <div class="product-info">
                         <h3 class="product-name">Gadget 3</h3>
                         <div class="product-price">GHS 200.00</div>
+                        <div class="quantity-control">
+                            <button class="quantity-btn minus-btn" data-product-id="703">-</button>
+                            <span class="quantity-value" data-product-id="703">1</span>
+                            <button class="quantity-btn plus-btn" data-product-id="703">+</button>
+                        </div>
                         <div class="product-buttons">
-                            <button class="button add-to-cart-btn" onclick="addToCart('703', 'Gadget 3', 200.00)">Add to Cart</button>
+                            <button class="button add-to-cart-btn" data-product-id="703" data-product-name="Gadget 3" data-product-price="200.00">Add to Cart</button>
                             <a href="product-details.html" class="button view-details-btn">View More</a>
                         </div>
                     </div>
@@ -125,8 +140,13 @@
                     <div class="product-info">
                         <h3 class="product-name">Gadget 4</h3>
                         <div class="product-price">GHS 250.00</div>
+                        <div class="quantity-control">
+                            <button class="quantity-btn minus-btn" data-product-id="704">-</button>
+                            <span class="quantity-value" data-product-id="704">1</span>
+                            <button class="quantity-btn plus-btn" data-product-id="704">+</button>
+                        </div>
                         <div class="product-buttons">
-                            <button class="button add-to-cart-btn" onclick="addToCart('704', 'Gadget 4', 250.00)">Add to Cart</button>
+                            <button class="button add-to-cart-btn" data-product-id="704" data-product-name="Gadget 4" data-product-price="250.00">Add to Cart</button>
                             <a href="product-details.html" class="button view-details-btn">View More</a>
                         </div>
                     </div>
@@ -203,7 +223,54 @@
                     }
                 }
             }
+
+            // Setup quantity controls and Add to Cart for static product cards
+            setupStaticProductControls();
         });
+
+        function setupStaticProductControls() {
+            // Setup quantity control listeners for static cards
+            document.addEventListener('click', (e) => {
+                const target = e.target;
+
+                if (target.classList.contains('plus-btn')) {
+                    const productId = target.getAttribute('data-product-id');
+                    const quantityElement = document.querySelector(`.quantity-value[data-product-id="${productId}"]`);
+                    if (quantityElement) {
+                        let quantity = parseInt(quantityElement.textContent);
+                        quantityElement.textContent = quantity + 1;
+                    }
+                } else if (target.classList.contains('minus-btn')) {
+                    const productId = target.getAttribute('data-product-id');
+                    const quantityElement = document.querySelector(`.quantity-value[data-product-id="${productId}"]`);
+                    if (quantityElement) {
+                        let quantity = parseInt(quantityElement.textContent);
+                        if (quantity > 1) {
+                            quantityElement.textContent = quantity - 1;
+                        }
+                    }
+                }
+            });
+
+            // Setup Add to Cart listeners for static cards
+            document.querySelectorAll('.add-to-cart-btn[data-product-id]').forEach(button => {
+                button.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    const productId = button.getAttribute('data-product-id');
+                    const productName = button.getAttribute('data-product-name');
+                    const productPrice = parseFloat(button.getAttribute('data-product-price'));
+                    const quantityElement = document.querySelector(`.quantity-value[data-product-id="${productId}"]`);
+                    const quantity = quantityElement ? parseInt(quantityElement.textContent) : 1;
+
+                    // Add to cart multiple times based on quantity
+                    for (let i = 0; i < quantity; i++) {
+                        if (typeof addToCart === 'function') {
+                            addToCart(productId, productName, productPrice);
+                        }
+                    }
+                    alert(`${quantity} item(s) added to cart!`);
+                });
+            });
     </script>
 </body>
 </html>
