--- a/product-details.html
+++ b/product-details.html
@@ -63,7 +63,12 @@
                 <p class="description" id="product-description">
                     This is a detailed description of the product. It includes all the features, specifications, and benefits of the product.
                 </p>
-                <button class="button" onclick="addToCart('1', 'Product Title', 100.00)">Add to Cart</button>
+                <div class="quantity-control">
+                    <button class="quantity-btn minus-btn" id="decrease-quantity">-</button>
+                    <span class="quantity-value" id="product-quantity">1</span>
+                    <button class="quantity-btn plus-btn" id="increase-quantity">+</button>
+                </div>
+                <button class="button" id="add-to-cart-btn" onclick="addToCart('1', 'Product Title', 100.00)">Add to Cart</button>
             </div>
         </section>
 
@@ -166,9 +171,9 @@
                 }
 
                 // Update Add to Cart button
-                const addToCartBtn = document.querySelector('.product-info .button');
+                const addToCartBtn = document.getElementById('add-to-cart-btn');
                 if (addToCartBtn) {
-                    addToCartBtn.onclick = () => addToCart(productId, product.name, product.price, product.coverImage);
+                    addToCartBtn.onclick = () => addToCartWithQuantity(productId, product.name, product.price, product.coverImage);
                 }
 
             } catch (error) {
@@ -184,6 +189,35 @@
                 mainImage.innerHTML = `<img src="${imageSrc}" alt="Product Image" style="width: 100%; height: 100%; object-fit: contain;">`;
             }
         }
+
+        // Quantity control functions
+        function increaseQuantity() {
+            const quantityElement = document.getElementById('product-quantity');
+            let quantity = parseInt(quantityElement.textContent);
+            quantityElement.textContent = quantity + 1;
+        }
+
+        function decreaseQuantity() {
+            const quantityElement = document.getElementById('product-quantity');
+            let quantity = parseInt(quantityElement.textContent);
+            if (quantity > 1) {
+                quantityElement.textContent = quantity - 1;
+            }
+        }
+
+        function addToCartWithQuantity(productId, productName, productPrice, productImage) {
+            const quantityElement = document.getElementById('product-quantity');
+            const quantity = parseInt(quantityElement.textContent);
+
+            for (let i = 0; i < quantity; i++) {
+                addToCart(productId, productName, productPrice, productImage);
+            }
+            alert(`${quantity} item(s) added to cart!`);
+        }
+
+        // Setup quantity control event listeners
+        document.getElementById('increase-quantity').addEventListener('click', increaseQuantity);
+        document.getElementById('decrease-quantity').addEventListener('click', decreaseQuantity);
     </script>
 </body>
 </html>
