new added call banner

--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             </div>
         </nav>
     </header>
-    
+
+    <!-- Call To Order Banner -->
+    <section class="call-to-order-banner">
+        <div class="call-banner-content">
+            <h2>📞 Call To Order</h2>
+            <p>Prefer to place your order over the phone? Call us now for personalized assistance!</p>
+            <a href="tel:+2330598956469" class="call-button">Call Now</a>
+        </div>
+    </section>
+
     <!-- Promotional Banner -->
     <section class="promo-banner">
         <h2>🔥 LIMITED TIME OFFER! 🔥</h2>
