--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Buysmart Enterprise - Contact</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="icon" href="assets/images/Buysmartlogo.PNG" type="image/png">
 </head>
 <body>
     <header>
