--- a/women-products.html
+++ b/women-products.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buysmart Enterprise - Women Products</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/images/Buysmartlogo.PNG" type="image/png">
 </head>
 <body>
     <header>
